my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EINCTYPE/EINCTYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINCTYPE.dml:8:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINCTYPE.dml:11:5: error EINCTYPE: wrong type for '<property object at 0x0000018C78E2D9E0>' operator
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINCTYPE.dml:13:5: error EINCTYPE: wrong type for '<property object at 0x0000018C78E2D9E0>' operator
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EINCTYPE.dml:16:5: error EINCTYPE: wrong type for '<property object at 0x0000018C78E2D9E0>' operator
